Jon's Ubercart bitcoin-related changes; Fix for annoying Porcfest nav jump

--- a/sites/all/themes/fsp960/css/registration.css
+++ b/sites/all/themes/fsp960/css/registration.css
@@ -52,7 +52,7 @@ padding: 5px;
 
 .view-fsp-registration .views-field-addtocartlink {
   width: 140px;
-  font-size: x-small;
+  font-size: medium;
 }
 
 .view-fsp-registration .views-field-sell-price {
